--- a/shell/public/index.html
+++ b/shell/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- <script src='http://localhost:8001/remoteEntry.js'></script> -->
     </head>
     <body>
         <div id='root'></div>
-        <div id='home-app'></div>
     </body>
 </html>
